# ctez

./: .gitignore  Makefile  README.md  context.mligo  ctez_2.mligo  description_v2.md  errors.mligo  example.env  fa12.mligo  half_dex.mligo  oven.mligo  oven_types.mligo  pyproject.toml  stdctez.mligo
.github/workflows/: main.yml
attic/: limit_dex.mligo
contracts/: fa12.mligo  oven.mligo
contracts/common/: constants.mligo  errors.mligo  stdctez.mligo
contracts/ctez/: context.mligo  ctez_2.mligo  events.mligo  half_dex.mligo
docs/: marginal_price_error_calc.py  newton_for_ctez2.nb
frontend/app/: .env  .env.example  .env.ghostnet  .env.granada  .eslintrc.js  .prettierrc  README.md  package.json
frontend/app/patches/: @airgap+beacon-dapp+3.3.4.patch  @airgap+beacon-ui+3.3.4.patch
frontend/app/public/: index.html  manifest.json
frontend/app/src/: App.tsx  i18n.ts  index.css  index.tsx
scripts/: ctez.py  deploy.py  examples.sh  helpers.py  metadata.py
tests/: base.py  test_fa12.py
tests/ctez2/: base.py  gas_consumption.json  test_cases.py  test_gas_consumption.py  test_lqt.py  test_subsidies.py
tests/ctez2/entrypoints/: test_add_ctez_liquidity.py  test_add_tez_liquidity.py  test_cases.py  test_collect_from_ctez_liquidity.py  test_collect_from_tez_liquidity.py  test_create_oven.py  test_ctez_to_tez.py  test_liquidate_oven.py  test_mint_or_burn_ctez.py  test_register_oven_deposit.py  test_remove_ctez_liquidity.py  test_remove_tez_liquidity.py  test_set_ctez_fa12_address.py  test_tez_to_ctez.py  test_withdraw_from_oven.py
tests/ctez2/housekeeping/: test_drift_and_target.py  test_subsidies.py
tests/fa12/: base.py
tests/fa12/entrypoints/: test_approve.py  (+5 more)
tests/helpers/: addressable.py  operation_result_recorder.py  utility.py
tests/oven/: base.py
(+175 files in other folders)
