[tool.poetry]
name = "ctez2"
version = "0.1.0"
description = ""
authors = ["Maxim Kucherov <maxima-net@bk.ru>"]
readme = "README.md"
packages = [
    { include = "tests" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytezos = "^3.11.3"
requests = "<2.32.0"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deploy = "scripts.ctez:deploy"
